Update smasher email templates: use new ALSF address

--- a/workers/data_refinery_workers/processors/smasher_email_error.html
+++ b/workers/data_refinery_workers/processors/smasher_email_error.html
@@ -1847,10 +1847,9 @@
                                   </p>
                                   <p class="text-center">
                                     <small>
-                                      Alex's Lemonade Stand Foundation <br />
-                                      111 Presidential Blvd, Suite 203, Bala
-                                      Cynwyd, PA 19004</small
-                                    >
+                                      Alex’s Lemonade Stand Foundation for Childhood Cancer <br />
+                                      333 E. Lancaster Ave, #414, Wynnewood, PA 19096 USA
+                                    </small>
                                   </p>
                                 </th>
                                 <th class="expander"></th>
